[tool.poetry]
name = "flaskblog"
version = "0.1.0"
description = ""
authors = ["Mykhailo Kozlovskyi <kozloffsky@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
flask-sqlalchemy = "^3.1.1"
flask-jwt-extended = "^4.6.0"
flask-alembic = "^3.0.1"
flask-pydantic = "^0.12.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
pydantic-settings = "^2.2.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
